--- a/CSS/schachbrett.css
+++ b/CSS/schachbrett.css
@@ -4,10 +4,10 @@ table{
 }
 
 
-
 td{
 
     border: solid 2px black;
     padding: 50px;
+    background-color: red;
 }
 tr:nth-child(odd)>td:nth-child(even),tr:nth-child(even)>td:nth-child(odd){background: black}
